--- a/TechnologyPriceMultiplier/changelog.txt
+++ b/TechnologyPriceMultiplier/changelog.txt
@@ -1,5 +1,5 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2024-10-31
-  Bugfixes:
+  Features:
     - Added multiplier for adjusting the exponential growth of infinite technologies.
