--- a/RoboportRangeMultiplier/changelog.txt
+++ b/RoboportRangeMultiplier/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.1
+Date: 2024-11-29
+  Changes:
+    - Better compatibility with other mods.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2024-10-31
   Features:
