RobotPowerMultiplier: Better mod compatibility

--- a/RobotPowerMultiplier/changelog.txt
+++ b/RobotPowerMultiplier/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 2025-01-22
+  Changes:
+    - Better compatibility with other mods.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2024-11-29
   Changes:
