Add roboport radar range multiplier

--- a/RoboportRangeMultiplier/changelog.txt
+++ b/RoboportRangeMultiplier/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.0
+Date: 2025-02-18
+  Features:
+    - Added multiplier for roboport radar range.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 2024-12-11
   Changes:
