Update info and changelogs about Chinese translation

--- a/RoboportRangeMultiplier/changelog.txt
+++ b/RoboportRangeMultiplier/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.1
+Date: 2025-07-13
+  Changes:
+    - Added simplified Chinese translation.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.0
 Date: 2025-02-18
   Features:
