--- a/MachineSpeedMultiplier/changelog.txt
+++ b/MachineSpeedMultiplier/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.1
+Date: 2025-07-13
+  Changes:
+    - Added simplified Chinese translation.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 25. 10. 2024
   Features:
