--- a/RobotPowerMultiplier/changelog.txt
+++ b/RobotPowerMultiplier/changelog.txt
@@ -2,7 +2,7 @@
 Version: 1.0.3
 Date: 2025-07-13
   Changes:
-    - Added simplified Chinese translation.
+    - Added simplified Chinese translation (Thanks to Lexcellent for the contribution).
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 2025-01-22
