--- a/TechnologyPriceMultiplier/changelog.txt
+++ b/TechnologyPriceMultiplier/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.0
+Date: 2025-07-27
+  Changes:
+    - Added multiplier to make technology costs scale exponentially with each new science pack tier.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 2025-07-13
   Changes:
