TechnologyPriceMultiplier: Add tier scaling curve adjustment option

--- a/TechnologyPriceMultiplier/changelog.txt
+++ b/TechnologyPriceMultiplier/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.0
+Date: 2025-07-30
+  Changes:
+    - Added curve adjustment option for the new tier-based exponential cost scaling.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.1
 Date: 2025-07-30
   Changes:
