--- a/TechnologyPriceMultiplier/changelog.txt
+++ b/TechnologyPriceMultiplier/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.1
+Date: 2025-07-30
+  Changes:
+    - Added /top-expensive-techs command for printing the top 5 most expensive technologies in the tech tree.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 2025-07-30
   Changes:
