--- a/TechnologyPriceMultiplier/changelog.txt
+++ b/TechnologyPriceMultiplier/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.0
+Date: 2025-09-27
+  Changes:
+    - Fixed longstanding incorrect math for the price growth factor of infinite tech, which caused incorrect initial costs for some tech, and incorrect growth scaling of others.
+---------------------------------------------------------------------------------------------------
 Version: 1.4.1
 Date: 2025-09-25
   Changes:
